Fix the overflow.

--- a/_assets/sass/_code.scss
+++ b/_assets/sass/_code.scss
@@ -7,7 +7,7 @@ code {
   font-family: Menlo, Monaco, Consolas, "DejaVu Sans Mono", monospace;
 }
 
-pre {
+pre code {
   overflow: auto;
   line-height: 1;
   word-wrap: normal;
